--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,4 @@
-.navbar {
-    display: flex;
-    justify-content: center;
-    margin: 20px 0px 20px 0px;
-    padding: 20px;
-    gap: 30px;
-    border-bottom: solid black;
-}
-
+/* General Items */
 a {
     text-decoration: none;
     color: black;
@@ -25,86 +17,257 @@ h2 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.hero {
-    margin: 20px 0px 20px 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 200px;
-}
+/* Nav Bar */
+    /* General */
+    nav {
+        display: flex;
+        justify-content: center;
+        margin: 20px 0px 20px 0px;
+        padding: 20px;
+        gap: 30px;
+        border-bottom: solid black;
+    }
 
-.header {
-    margin: 20px 0px 20px 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 100px;
-}
+    /* Nav Tags */
+    nav a {
+        text-decoration: none;
+        color: black;
+    }
 
-.column {
-    flex: 1;
-    padding: 30px;
-    box-sizing: border-box;
-}
+    /* Nav Active Tags */
+    nav a.active {
+        color: rgb(96, 96, 96);
+        text-shadow: 0.5px 0.5px 0.25px rgb(160, 160, 160);
+        text-decoration: underline;
+    }
 
-.aboutme {
-    display: flex;
-    flex-direction: row;
-    padding: 0px 0px 100px 0px;
-    margin: 0px 150px 0px 150px;
-}
+    /* Headers */
+    .header {
+        margin: 20px 0px 20px 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 100px;
+    }
 
-img {
-    width: auto;
-    height: 700px;
-    border-radius: 5px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-}
-.myphoto {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+/* Home Page */
+    /* Hero */
+    .hero {
+        margin: 20px 0px 20px 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 200px;
+        flex: 1 1 auto;
+        min-width: 100px;
+    }
 
-.spiel {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+    .biglogo {
+        width: 300px;
+    }
 
-.greeting {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 20px 400px 20px 400px;
-    text-align: center;
-}
+    /* Greeting */
+    .greeting {
+        display: flex;
+        flex: 1 1 auto;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 20px 100px 20px 100px;
+        text-align: center;
+    }
 
-input[type = text] {
-    width: 100%;
-    padding: 15px;
-}
+/* About Me Page */
+    /* Parent */
+    .aboutme {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 0px 0px 100px 0px;
+        margin: 0px 50px 0px 50px;
+        gap: 0px;
+    }
 
-input[type = email] {
-    width: 100%;
-    padding: 15px;
-}
+    /* Both Children */
+    .column {
+        flex: 1 1 45%;
+        min-width: 400px;
+        padding: 0px;
+        box-sizing: border-box;
+    }
 
-input[type = submit] {
-    width: 30%;
-    padding: 8px;
-}
+    /* Child 1 */
+    .myphoto {
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+    }
 
-iframe {
-    margin: 0px200px;
-}
-.bignavbar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-}
+    /* Content in Child 1 */
+    .headshot {
+        width: 70%;
+        height: auto;
+        border-radius: 5px;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    }
+
+    /* Child 2 */
+    .spiel {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0px 50px 0px 0px;
+    }
+
+/* Contact Page */
+    /* Form */
+    input[type=text] {
+        width: 100%;
+        padding: 15px;
+    }
+
+    input[type=email] {
+        width: 100%;
+        padding: 15px;
+    }
+
+    input[type=submit] {
+        width: 30%;
+        padding: 8px;
+    }
+
+/* Resume Page */
+    /* Resume PDF */
+    .PDF {
+        display: flex;
+        flex: 1 1 auto;
+        min-width: 0px;
+    }
+
+    iframe {
+        margin: 0px 20px;
+        height: 700px;
+    }
+
+/* Big Navigation Buttons */
+    /* Parent */
+    .bignavbar {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        margin: 200px 20px;
+    }
+    /* Resume block */
+    .bigresume {
+        padding: 80px;
+        width: 300px;
+        height: 300px;
+        box-sizing: border-box;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        border: solid black;
+        border-width: 2px;
+    }
+        /* Resume Icon */
+        .resumeicon {
+            width: 160px;
+        }
+    
+    /* Projects block */
+    .bigprojects {
+        padding: 80px;
+        width: 300px;
+        height: 300px;
+        box-sizing: border-box;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        border: solid black;
+        border-width: 2px;
+    }
+
+        /* Projects Image */
+        .projectsimage {
+            width: 200px;
+        }
+
+    /* About Me Block */
+    .bigaboutme {
+        padding: 80px;
+        width: 300px;
+        height: 300px;
+        box-sizing: border-box;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        border: solid black;
+        border-width: 2px;
+    }
+        /* About Me Image */
+        .aboutmeimage {
+            width: 110px;
+        }
+
+    /* Contact Block */
+    .bigcontact {
+        padding: 80px;
+        width: 300px;
+        height: 300px;
+        box-sizing: border-box;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        border: solid black;
+        border-width: 2px;
+    }
+        /* Contact Icon */
+        .contacticon {
+            width: 150px;
+        }
+
+/* Footnav */
+    /* Parent */
+    .footnav {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        gap: 30px;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        border-top: solid black;
+        margin: 200px 0px 0px 0px;
+    }
+
+    /* Instagram */
+    .instagram {
+        width: 30px;
+        height: 30px;
+    }
+
+    /* Tiktok */
+    .tiktok {
+        width: 60px;
+        height: 60px;
+    }
+
+    /* Handshake */
+    .handshake {
+        width: 30px;
+        height: 30px;
+    }
+
+    /* Linkedin */
+    .linkedin {
+        width: 30px;
+        height: 30px;
+    }
